Fixed nginx configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,36 @@
-server {
-    listen 80;
+# /etc/nginx/nginx.conf
 
-    # Serve the static assets
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri /index.html;
+# Main context
+worker_processes 1;
+events {
+    worker_connections 1024;
+}
+
+http {
+    # Include other configurations like MIME types, etc.
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    # Server context (this is where the "server" block goes)
+    server {
+        listen 80;
+
+        # Serve the static files from the default location
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri /index.html;
+        }
+
+        # Optional: Serve static assets with caching headers
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+            expires 1y;
+            add_header Cache-Control "public, no-transform";
+        }
+
+        # Handle 404s and redirect to index.html (important for React Router)
+        error_page 404 /index.html;
     }
-
-    # Optional: Serve static files with caching headers
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, no-transform";
-    }
-
-    # Handle other assets
-    error_page 404 /index.html;
 }
