Fixed nginx config for assets

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,12 @@ http {
     server {
         listen 80;
 
+        # Serve static files (JS, CSS, images, etc.)
+        location /assets/ {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+        }
+
         # Serve the static files from the default location
         location / {
             root /usr/share/nginx/html;
