Point nginx to root of the app; Added stub for favicon.ico

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,24 +18,31 @@ http {
     server {
         listen 80;
 
+        root /usr/share/nginx/html;
+
         # Serve static files (JS, CSS, images, etc.)
         location /assets/ {
-            root /usr/share/nginx/html;
             try_files $uri =404;
         }
 
-        # Serve the static files from the default location
+        # Serve index.html for everything else
         location / {
-            root /usr/share/nginx/html;
             try_files $uri /index.html;
         }
 
-        # Optional: Serve static assets with caching headers
+        # Serve static assets with caching headers
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public, no-transform";
         }
 
+        # Stub favicon
+        location /favicon.ico {
+            return 204;
+            access_log     off;
+            log_not_found  off;
+        }
+        
         # Handle 404s and redirect to index.html (important for React Router)
         error_page 404 /index.html;
     }
