--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,16 @@ http {
             try_files $uri /index.html;
         }
 
+        # Forward /api to the Deno container
+        location /api {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+            proxy_buffering off;
+            proxy_pass http://api;
+        }
+
         # Serve static assets with caching headers
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
