--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "supertokens-auth-react": "^0.47.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
