--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^22.7.5",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "flowbite-react": "^0.10.2",
