--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -1,9 +1,9 @@
 services:
   frontend:
+    volumes:
+      - ./dist:/usr/share/nginx/html:ro
     ports:
       - 80:80
-    env_file:
-      - .env
 
   api:
     volumes:
