--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -1,15 +1,28 @@
 services:
   frontend:
+    build:
+      target: dev
     volumes:
-      - ./dist:/usr/share/nginx/html:ro
+      - ./:/app
+      - node_modules:/app/node_modules
     ports:
-      - 80:80
+      - 8000:8000
+    env_file:
+      - .env
 
   api:
+    build:
+      target: dev
     volumes:
-      - data:/app/data:rw
+      - ./api:/app
+    ports:
+      - 9000:80
+    env_file:
+      - .env
+
+  postgres:
     env_file:
       - .env
 
 volumes:
-  data:
+  node_modules:
