--- a/nginx.conf
+++ b/nginx.conf
@@ -14,11 +14,11 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    # Server context (this is where the "server" block goes)
+    # Server context
     server {
         listen 80;
 
-        root /usr/share/nginx/html;
+        root /var/www/public;
 
         # Serve static files (JS, CSS, images, etc.)
         location /assets/ {
