Finished fixing the system architecture

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,27 @@
 FROM denoland/deno as dev
 
+ARG DATABASE_URL=
+ENV DATABASE_URL=${DATABASE_URL}
+
 WORKDIR /app
 
 COPY . /app
 
-EXPOSE 80
+RUN apt-get update -yqq && apt-get install -yqq openssl
+
+RUN deno task prisma:generate
+
+RUN deno task prisma migrate dev --skip-generate || env
 
 CMD ["task", "dev"]
 
 FROM denoland/deno as prod
 
+WORKDIR /app
+
 COPY . /app
+
+EXPOSE 9000
 
 RUN deno cache src/main.ts
 
