--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -1,4 +1,16 @@
 services:
+  api:
+    build:
+      target: dev
+      args:
+        DATABASE_URL: ${DATABASE_URL:?error}
+    volumes:
+      - ./api:/app
+    ports:
+      - 9000:9000
+    env_file:
+      - .env
+
   frontend:
     build:
       target: dev
@@ -7,16 +19,6 @@ services:
       - node_modules:/app/node_modules
     ports:
       - 8000:8000
-    env_file:
-      - .env
-
-  api:
-    build:
-      target: dev
-    volumes:
-      - ./api:/app
-    ports:
-      - 9000:80
     env_file:
       - .env
 
