--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update -yqq && apt-get install -yqq openssl
 
 RUN deno task prisma:generate
 
-RUN deno task prisma migrate dev --skip-generate || env
+RUN deno task prisma migrate dev --skip-generate
 
 CMD ["task", "dev"]
 
@@ -22,6 +22,13 @@ WORKDIR /app
 COPY . /app
 
 EXPOSE 9000
+
+ARG DATABASE_URL=
+ENV DATABASE_URL=${DATABASE_URL}
+
+RUN apt-get update -yqq && apt-get install -yqq openssl
+
+RUN deno task prisma:generate
 
 RUN deno cache src/main.ts
 
