Fixed prod docker setup

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -17,19 +17,19 @@ CMD ["task", "dev"]
 
 FROM denoland/deno as prod
 
-WORKDIR /app
-
-COPY . /app
-
-EXPOSE 9000
-
 ARG DATABASE_URL=
 ENV DATABASE_URL=${DATABASE_URL}
 
 RUN apt-get update -yqq && apt-get install -yqq openssl
 
+WORKDIR /app
+
+EXPOSE 9000
+
+COPY . /app
+
 RUN deno task prisma:generate
 
 RUN deno cache src/main.ts
 
-CMD ["run", "--allow-net", "--allow-env", "--allow-read", "src/main.ts"]
+CMD ["run", "--allow-net", "--allow-env", "--allow-read", "--allow-ffi", "src/main.ts"]
