Separated dev and prod deno ports

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,35 +1,21 @@
-FROM denoland/deno as dev
+FROM denoland/deno as builder
 
 ARG DATABASE_URL=
 ENV DATABASE_URL=${DATABASE_URL}
 
 WORKDIR /app
-
-COPY . /app
-
-RUN apt-get update -yqq && apt-get install -yqq openssl
-
-RUN deno task prisma:generate
-
-RUN deno task prisma migrate dev --skip-generate
-
-CMD ["task", "dev"]
-
-FROM denoland/deno as prod
-
-ARG DATABASE_URL=
-ENV DATABASE_URL=${DATABASE_URL}
-
-RUN apt-get update -yqq && apt-get install -yqq openssl
-
-WORKDIR /app
-
+ENV PORT=9000
 EXPOSE 9000
 
 COPY . /app
 
+RUN apt-get update -yqq && apt-get install -yqq openssl
 RUN deno task prisma:generate
+RUN deno task prisma migrate dev --skip-generate
 
+FROM builder as dev
+CMD ["task", "dev"]
+
+FROM builder as prod
 RUN deno cache src/main.ts
-
 CMD ["run", "--allow-net", "--allow-env", "--allow-read", "--allow-ffi", "src/main.ts"]
